# LouWiiGui

./: COPYING  LouWiiGui.ui  Makefile.in  README  aclocal.m4  config.h.in  configure  configure.ac  configure.scan  estUt.xml  estUt.xml~  lou.c  lou.c~  lou.h  lou.h~  louwiigui  neio.xml  neio.xml~  patch_example.json  patch_example.xml  patch_schema.xsd  simple_bass.xml  singleTone.xml  testIn.xml  testIn5k2zEJ  testOut.xml  xml_functions.c  xml_functions.c~
include/: config.h.in  lou.h  midi.h  xml_file_io.h
src/: Makefile.am  Makefile.in  lou.c  midi.c  xml_file_io.c  xml_functions.c
